# SDash

./: .gitignore  pyproject.toml  requirements.txt
app/: config.py
app/static/js/: check_updates.js
app/templates/: index.html
