[tool.poetry]
name = "sdash"
version = "0.3.6"
description = "A simple server dashboard for smaller private servers"
authors = ["Nighty3098 <154594695+Nighty3098@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^6.1.0"
flask = "^3.0.3"
pynvml = "^11.5.3"
setproctitle = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
